Enable download button when model is ready.

--- a/public/index.html
+++ b/public/index.html
@@ -77,6 +77,10 @@
             const json = await res.json();
             document.getElementById("status").innerText = JSON.stringify(json);
             console.log("status", status);
+            if (status.url) {
+                document.getElementById("download_button").disabled = false;
+                document.getElementById("download_button").onclick = () => window.location = status.url;
+            }
         }
 
         prepareDropzone();
